1. 服务端，调整了接口 path，增加了缓存机制。估值 manager 下线旧版本的本地文件缓存。nginx 配置文件 default 更新。familyholding-uwsgi.ini 文件更新。新增 requirements 提示。 2. 客户端，新增了分类1汇总盈亏，持仓净值颜色会根据盈亏情况变红变绿。

--- a/app/server/config/familyholding-uwsgi.ini
+++ b/app/server/config/familyholding-uwsgi.ini
@@ -1,9 +1,10 @@
 [uwsgi]
 #由于外部还要嵌套Nginx，这里可以使用socket进行通信，如果Nginx和uwsgi部署在同一台机器上，直接使用127.0.0.1
 #如果外部直接通过uwsgi访问服务，需将socket改为http-socket或者http，将127.0.0.1改为0.0.0.0
-socket = 127.0.0.1:8081
+socket = 127.0.0.1:8082
+
 #项目目录
-chdir = /var/www/flask/deal-record/
+chdir = /var/www/flask/deal-record
 
 #虚拟环境所在路径
 virtualenv =/root/anaconda3/envs/flask
@@ -13,6 +14,8 @@ wsgi-file = /var/www/flask/deal-record/main_flask.py
 
 #Flask应用对象
 callable = app
+
+manage-script-name = true
 
 master=True # master :允许主线程存在（true）
 
