--- a/app/client/package.json
+++ b/app/client/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
